# kNNOptimizer

./: CMakeLists.txt  filtered_data.csv  main.cc
include/: Classifier.h  Config.h  Data.h  Genetics.h  Optimizer.h  Problem.h  Random.h  Reader.h  Vector.h
src/: CSVReader.cpp  Classifier.cpp  Config.cpp  DataPoint.cpp  DataSet.cpp  GeneticOptimizer.cpp  Genetics.cpp  GenomeSpec.cpp  KNNClassifier.cpp  KNNOptimumParam.cpp  LNNorm.cpp  UniformGenerator.cpp  Vector.cpp
